--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
       - ./.env
   db:
     image: postgres:14.4-alpine
+    restart: always
     volumes:
       - /var/lib/postgresql/data/
 
@@ -23,6 +24,7 @@ services:
       - ./.env
   nginx:
     image: nginx:1.21.3-alpine
+    restart: always
     ports:
       - "80:80"
 
